# possibly-prophet-2

./: .env  .env.example  AGENT_ERROR_HANDLING.md  CREDENTIALS_SETUP.md  HACKATHON_DEMO_GUIDE.md  QUICK_FIX_CREDENTIALS.md  educational_presentation.py  extract_aws_credentials.py  generated_presentation.py  main.py  pyproject.toml  test_agents_setup.py  test_enhanced_scraping_demo.py  test_mvp_demo.py
.hypothesis/constants/: 0fa27b7e8e256f94  128605240509e2c3  1eb1324c3af3a8c4  2401685996eebe04  2f3775749937f05f  338f5ecfd9c5cb1b  375e46d283324963  394e36f78a306c82  3cad59679eef119e  460b035bf6d05346  4755ebaeff873a6e  518bc93a1f7519aa  5944559f2cfea952  5dbf860208e6a0be  624203cbdd05b070  6af551cc228e2978  6dec22d9654b1626  (+22 more)
agents/: __init__.py  agent_factory.py  base_agent.py  learning_objectives_agent.py  manim_generation_agent.py  pedagogy_workflow.py
app/: __init__.py  main.py
backend/: .env  AGENT_COORDINATION_PROPERTIES.md  CONTENT_VALIDATION_SUMMARY.md  instructions.md  pyproject.toml  pytest.ini
chroma_db/: chroma.sqlite3
config/: agents_config.py
frontend/: instructions.md  openapi.json  package.json  pnpm-lock.yaml
templates/: base.html  demo.html  index.html
tests/: README_AGENT_COORDINATION.md  __init__.py  conftest.py  test_content_endpoints.py  test_content_validation_integration.py  test_content_validator.py  test_document_parser.py  test_error_handling.py  test_input_storage.py  test_input_storage_properties.py  test_main.py  test_pdf_extraction_properties.py  test_url_processing.py  test_validation_endpoints.py  test_vector_db.py
(+213 files in other folders)
